exports[`Details snapshots Completed todo 1`] = `
<div
  className="detailsWrap">
  <h3>
    <span
      className="todo-text">
      second
    </span>
    <section
      className="small material-icons gesLkU">
      done
    </section>
  </h3>
  <textarea
    className="materialize-textarea cYOoHJ"
    defaultValue="s"
    placeholder="Aditional informations about this todo" />
  <button
    className="btn light-blue darken-4 jeYtjl"
    onClick={[Function]}>
     Cancel 
  </button>
  <button
    className="btn light-blue darken-4 cdkWzD"
    onClick={[Function]}>
     Save 
  </button>
</div>
`;

exports[`Details snapshots Not completed todo 1`] = `
<div
  className="detailsWrap">
  <h3>
    <span
      className="todo-text">
      first
    </span>
  </h3>
  <textarea
    className="materialize-textarea cYOoHJ"
    defaultValue="f"
    placeholder="Aditional informations about this todo" />
  <button
    className="btn light-blue darken-4 jeYtjl"
    onClick={[Function]}>
     Cancel 
  </button>
  <button
    className="btn light-blue darken-4 cdkWzD"
    onClick={[Function]}>
     Save 
  </button>
</div>
`;

exports[`Todo snapshots Completed todo 1`] = `
<li
  className="card-panel light-green lighten-1"
  id={undefined}>
  <span
    className="todo-text">
    second
  </span>
  <section
    className="controls gesLkU">
    <span
      className="ehlOiC"
      onClick={undefined}>
      <i
        className="small material-icons complete">
        restore
      </i>
    </span>
    <span
      className="iAwBni"
      onClick={undefined}>
      <a
        href="/details/undefined"
        onClick={[Function]}>
        <i
          className="small material-icons info">
          info_outline
        </i>
      </a>
    </span>
    <span
      className="ehEPdz"
      onClick={undefined}>
      <i
        className="small material-icons remove">
        delete
      </i>
    </span>
  </section>
</li>
`;

exports[`Todo snapshots Not completed todo 1`] = `
<li
  className="card-panel light-blue lighten-1"
  id={undefined}>
  <span
    className="todo-text">
    first
  </span>
  <section
    className="controls gesLkU">
    <span
      className="ehlOiC"
      onClick={undefined}>
      <i
        className="small material-icons complete">
        done
      </i>
    </span>
    <span
      className="iAwBni"
      onClick={undefined}>
      <a
        href="/details/undefined"
        onClick={[Function]}>
        <i
          className="small material-icons info">
          info_outline
        </i>
      </a>
    </span>
    <span
      className="ehEPdz"
      onClick={undefined}>
      <i
        className="small material-icons remove">
        delete
      </i>
    </span>
  </section>
</li>
`;

exports[`Todos snapshots Active todos 1`] = `
<ul
  className="dNIryj">
  <li
    className="card-panel light-blue lighten-1"
    id={0}>
    <span
      className="todo-text">
      first
    </span>
    <section
      className="controls gesLkU">
      <span
        className="ehlOiC"
        onClick={undefined}>
        <i
          className="small material-icons complete">
          done
        </i>
      </span>
      <span
        className="iAwBni"
        onClick={undefined}>
        <a
          href="/details/0"
          onClick={[Function]}>
          <i
            className="small material-icons info">
            info_outline
          </i>
        </a>
      </span>
      <span
        className="ehEPdz"
        onClick={undefined}>
        <i
          className="small material-icons remove">
          delete
        </i>
      </span>
    </section>
  </li>
</ul>
`;

exports[`Todos snapshots All todos 1`] = `
<ul
  className="dNIryj">
  <li
    className="card-panel light-blue lighten-1"
    id={0}>
    <span
      className="todo-text">
      first
    </span>
    <section
      className="controls gesLkU">
      <span
        className="ehlOiC"
        onClick={undefined}>
        <i
          className="small material-icons complete">
          done
        </i>
      </span>
      <span
        className="iAwBni"
        onClick={undefined}>
        <a
          href="/details/0"
          onClick={[Function]}>
          <i
            className="small material-icons info">
            info_outline
          </i>
        </a>
      </span>
      <span
        className="ehEPdz"
        onClick={undefined}>
        <i
          className="small material-icons remove">
          delete
        </i>
      </span>
    </section>
  </li>
  <li
    className="card-panel light-green lighten-1"
    id={1}>
    <span
      className="todo-text">
      second
    </span>
    <section
      className="controls gesLkU">
      <span
        className="ehlOiC"
        onClick={undefined}>
        <i
          className="small material-icons complete">
          restore
        </i>
      </span>
      <span
        className="iAwBni"
        onClick={undefined}>
        <a
          href="/details/1"
          onClick={[Function]}>
          <i
            className="small material-icons info">
            info_outline
          </i>
        </a>
      </span>
      <span
        className="ehEPdz"
        onClick={undefined}>
        <i
          className="small material-icons remove">
          delete
        </i>
      </span>
    </section>
  </li>
  <li
    className="card-panel light-green lighten-1"
    id={2}>
    <span
      className="todo-text">
      third
    </span>
    <section
      className="controls gesLkU">
      <span
        className="ehlOiC"
        onClick={undefined}>
        <i
          className="small material-icons complete">
          restore
        </i>
      </span>
      <span
        className="iAwBni"
        onClick={undefined}>
        <a
          href="/details/2"
          onClick={[Function]}>
          <i
            className="small material-icons info">
            info_outline
          </i>
        </a>
      </span>
      <span
        className="ehEPdz"
        onClick={undefined}>
        <i
          className="small material-icons remove">
          delete
        </i>
      </span>
    </section>
  </li>
</ul>
`;
